--- a/app/src/main/res/layout/layout_grid_item_categorie.xml
+++ b/app/src/main/res/layout/layout_grid_item_categorie.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff00ff"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center"
+    >
 
-
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:padding="20dp"
+        android:id="@+id/iv_categorie_image"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_categorie_nom"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/iv_categorie_image"/>
+        android:id="@+id/tv_categorie_nom"
+        android:textSize="25dp"
+        android:text="Demo"/>
 
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
