--- a/app/src/main/res/layout/layout_grid_item_categorie.xml
+++ b/app/src/main/res/layout/layout_grid_item_categorie.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
     >
+        <ImageView
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:padding="20dp"
-        android:id="@+id/iv_categorie_image"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_categorie_nom"
-        android:textSize="25dp"
-        android:text="Demo"/>
-
-</androidx.appcompat.widget.LinearLayoutCompat>
+            android:id="@+id/iv_categorie_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/boder_categorie"
+            android:scaleType="centerInside"
+            />
+        <TextView
+            android:id="@+id/tv_categorie_nom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            android:paddingTop="4dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:gravity="center_horizontal"/>
+</LinearLayout>
