--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -7,9 +7,7 @@
     android:orientation="vertical"
     tools:context=".SecondActivity">
 
-
-
-    <EditText android:id="@+id/Transactions"
+    <EditText android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="center"
@@ -19,6 +17,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:textColor="@android:color/black"
+        android:hint="Chercher un restaurant ..."
         android:autofillHints="search" />
 
     <ListView android:id="@+id/listView"
