--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -18,6 +18,8 @@
         android:id="@+id/titre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:textStyle="bold"
         android:layout_centerHorizontal="true"
         android:text="categorie des restaurants"
         android:layout_marginTop="40dp"
