--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="center"
+        android:focusable="auto"
         android:layout_gravity="center"
         android:textSize="20sp"
         android:layout_marginTop="30dp"
@@ -18,7 +19,7 @@
         android:layout_marginLeft="20dp"
         android:textColor="@android:color/black"
         android:hint="Chercher un restaurant ..."
-        android:autofillHints="search" />
+        />
 
     <ListView android:id="@+id/listView"
         android:layout_width="match_parent"
