--- a/app/src/main/res/layout/list_restaurant.xml
+++ b/app/src/main/res/layout/list_restaurant.xml
@@ -14,8 +14,9 @@
 
     <TextView
         android:id="@+id/nom"
+        android:textStyle="bold"
         android:layout_toEndOf="@id/image"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
