--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -13,6 +13,7 @@
          />
 
     <Button
+        android:id="@+id/appeler"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Appeler restaurant"/>
