--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -5,230 +5,65 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <Button
         android:id="@+id/ajouterRestau"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="ajouter restaurant" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nom"
-            android:layout_marginLeft="10dp"
-            android:textAlignment="textEnd"
-            android:textSize="20sp"
-
-            />
-        <EditText
-            android:visibility="visible"
-            android:id="@+id/txtNom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:layout_marginStart="70dp"
-            android:inputType="textPersonName"
-            android:hint="nom" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/txtupload"
-            android:layout_width="100dp"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="choisir une image"/>
-        <ImageView
-            android:id="@+id/imageRestau"
-            android:layout_width="180dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="15dp"
-            android:src="@drawable/upload_icon"
-            android:layout_marginTop="10dp"
-            />
-        <Button
-            android:id="@+id/uploadBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Upload"
-            android:textStyle="bold"
-            android:layout_marginStart="10dp"
-            android:textSize="12sp"
-            android:textColor="@color/white"
-            android:layout_gravity="center"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Description"
-            android:textSize="20sp"
-            android:layout_marginStart="10dp"
-            />
-        <EditText
-
-            android:id="@+id/txtDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:layout_marginStart="20dp"
-            android:inputType="textPersonName"
-            android:hint="description" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:gravity="center"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ouverture"
-            android:textSize="20sp"
-
-            />
-        <EditText
-
-            android:id="@+id/txtHOuverture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:inputType="textPersonName"
-            android:hint="07:30" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fermeture"
-            android:textSize="20sp"
-            android:layout_marginStart="70dp"
-            />
-        <EditText
-            android:id="@+id/txtHFermeture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:inputType="textPersonName"
-            android:hint="22:30" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="N° Telephone"
-            android:textSize="20sp"
-            android:layout_marginStart="10dp"
-            />
-        <EditText
-
-            android:id="@+id/txtTelephone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:inputType="textPersonName"
-            android:hint="0612027832" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/txtQRcode"
-            android:layout_width="100dp"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content"
-            android:text="upload QR code"/>
-        <ImageView
-            android:id="@+id/imageQRCode"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            android:layout_marginLeft="15dp"
-            android:src="@drawable/upload_icon"
-            />
-
-        <Button
-            android:id="@+id/uploadQRCode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Upload"
-            android:textStyle="bold"
-            android:layout_marginStart="10dp"
-            android:textSize="12sp"
-            android:textColor="@color/white"
-            android:layout_gravity="center"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:gravity="center"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Latitude"
-            android:textSize="20sp"
-            />
-        <EditText
-
-            android:id="@+id/txtLatitude"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:inputType="textPersonName"
-            android:hint="34.127855" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Longitude"
-            android:textSize="20sp"
-            android:layout_marginStart="20dp"
-            />
-        <EditText
-            android:id="@+id/txtLongitude"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-
-            android:hint="-6.179854" />
-    </LinearLayout>
+        android:text="ajouter restaurant"
+        android:layout_marginTop="20dp"
+        android:onClick="formRestaurant"/>
     <Button
-        android:id="@+id/valider"
+        android:id="@+id/chercherRestau"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="ajouter " />
+        android:text="ajouter un plat à un restraurant"
+        android:layout_marginTop="20dp"
+        android:onClick="searchRestaurant"/>
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/searchingRestau"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        >
+
+        <TextView
+            android:id="@+id/choixRestau"
+            android:layout_marginTop="20dp"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:text="Choix d'un restaurant"/>
+        <EditText
+            android:id="@+id/searchRestaurant"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:ems="10" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/filteredRestau"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </LinearLayout>
+    <Button
+        android:id="@+id/ajouterFood"
+        android:clickable="false"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Valider"
+        android:layout_marginTop="20dp"
+       />
+
 </LinearLayout>
