--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -11,7 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="470dp"
          />
-
+    <TextView
+        android:id="@+id/distanceTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <Button
         android:id="@+id/appeler"
         android:layout_width="wrap_content"
