--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -7,7 +7,7 @@
     >
     <fragment
         android:id="@+id/map"
-        class="com.google.android.gms.maps.SupportMapFragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="470dp"
          />
@@ -30,6 +30,7 @@
         android:text="Afficher menu"/>
     <Button
         android:id="@+id/itineraire"
+        android:onClick="drawRoute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Afficher itinéraire"/>
