--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,43 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".SecondActivity"
     >
-    <Button
-        android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="fill_parent"
+        android:src="@drawable/restau_wallpaper"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
-        android:onClick="login"
-        android:text="Login" />
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+
+
+        />
     <TextView
         android:id="@+id/titre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
+        android:textSize="30sp"
+        android:layout_gravity="center"
         android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        android:text="categorie des restaurants"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
-        android:layout_below="@id/btnLogin"/>
+        android:textColor="@color/Bronze_Ritual"
+        android:text="@string/categorie_des_restaurants"
+        android:shadowColor="@color/Deep_grey"
+        android:shadowDx="-3"
+        android:shadowDy="-3"
+        android:shadowRadius="1"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
 
-    <GridView
-        android:id="@+id/gvFood"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="2"
-        android:columnWidth="100dp"
-        android:gravity="center"
-        android:verticalSpacing="24dp"
-        android:horizontalSpacing="10dp"
-        android:stretchMode="spacingWidthUniform"
-        android:layout_below="@id/titre"
         />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="ExtraText">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <GridView
+                    android:id="@+id/gvFood"
+                    android:layout_width="wrap_content"
+                    android:layout_height="500dp"
+                    android:columnWidth="100dp"
+                    android:gravity="center"
+                    android:horizontalSpacing="10dp"
+                    android:numColumns="2"
+                    android:stretchMode="spacingWidthUniform"
+                    android:verticalSpacing="26dp"
+
+                 />
+                <Button
+                    android:id="@+id/btnLogin"
+                    android:backgroundTint="@color/Bronze_Ritual"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:onClick="login"
+                    android:text="@string/login"
+                    />
+            </LinearLayout>
+
+             />
+        </ScrollView>
 
 
-</RelativeLayout>
+
+
+</LinearLayout>
