--- a/app/src/main/res/drawable/boder_categorie.xml
+++ b/app/src/main/res/drawable/boder_categorie.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF" />
-    <stroke android:width="3dp" android:color="#1DA0E8" />
-    <corners android:radius="15dp"></corners>
+    <solid android:color="#52EAC0B6" />
+
+    <corners android:radius="25dp" />
 </shape>
