--- a/app/src/main/res/layout/layout_grid_item_categorie.xml
+++ b/app/src/main/res/layout/layout_grid_item_categorie.xml
@@ -17,6 +17,7 @@
         <TextView
             android:id="@+id/tv_categorie_nom"
             android:layout_width="wrap_content"
+            android:text="categorie"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="@color/Black_Tortoise"
