--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="Silver_Sycee">#A0A8B1</color>
     <color name="Yellow_Dragon">#FFC107</color>
     <color name="To_Go_Container">#F2F2F2</color>
+    <color name="Green">#4CAF50</color>
+
 </resources>
