--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#D3BAB0"
     tools:context=".SecondActivity"
     >
     <ImageView
@@ -20,7 +21,7 @@
         android:id="@+id/titre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:textSize="26sp"
         android:layout_gravity="center"
         android:textStyle="bold"
         android:textColor="@color/Bronze_Ritual"
@@ -30,7 +31,7 @@
         android:shadowDy="-3"
         android:shadowRadius="1"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
 
         />
         <ScrollView
@@ -50,7 +51,7 @@
                     android:horizontalSpacing="10dp"
                     android:numColumns="2"
                     android:stretchMode="spacingWidthUniform"
-                    android:verticalSpacing="26dp"
+                    android:verticalSpacing="15dp"
 
                  />
                 <Button
